--- a/TuCosta/App.xaml
+++ b/TuCosta/App.xaml
@@ -7,6 +7,7 @@
 
     <!--Application Resources-->
     <Application.Resources>
+        <local:LocalizedStrings xmlns:local="clr-namespace:TuCosta" x:Key="LocalizedStrings" />
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
